--- a/index.html
+++ b/index.html
@@ -1,6 +1,37 @@
 <html>
 <head>
-<script src="bower_components/threex.rendererstats/threex.rendererstats.js"></script>
+  <title>This is my first app</title>
+  <style>
+    body { margin: 0; }
+    canvas { width: 100%; height: 100% }
+  </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js"></script>
 </head>
-<body>
+<body style="margin: 0">
+  <script>
+    (function (wnd) {
+      var scene = new THREE.Scene();
+      var camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 0.1, 1000 );
+
+      var renderer = new THREE.WebGLRenderer();
+      renderer.setSize( window.innerWidth, window.innerHeight );
+      document.body.appendChild( renderer.domElement );
+
+      var geometry = new THREE.BoxGeometry( 1, 1, 1 );
+      var material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
+      var cube = new THREE.Mesh( geometry, material );
+      scene.add( cube );
+
+      camera.position.z = 5;
+      cube.rotation.x = 0.5;
+      cube.rotation.y = 0.5;
+      
+      wnd.render = function() {
+        requestAnimationFrame( wnd.render );
+        renderer.render(scene, camera);
+      }
+      wnd.render();
+    })(window);
+  </script>
 </body>
+</html>
